[tool.poetry]
name = "js-visualization"
version = "0.1.0"
description = ""
authors = ["fionasi <sicher.fiona@live.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.7.6"
pandas = "^2.2.3"
numpy = "^2.1.1"
emoji = "^2.13.2"
fuzzywuzzy = "^0.18.0"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
